# devenv-python-uv

./: .gitignore  LICENSE  Makefile  README.md  devenv.nix  pyproject.toml
